static/styles.css
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');

@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
/* ^ for large bold code ^ */

html {
    scroll-behavior: smooth;
}


body{
padding: 20px;
margin-bottom: 10%;
width: 90%;
height: 100%;
background-color: #121212;
display: inline-block;
}


p {
overflow: visible;
font-family: 'Source Code Pro', monospace;
font-size: 28px;
color: rgba(255,255,255,.70);
white-space: normal;
}

/* ----- css for the text input box -----*/

#inputs {
    position: sticky;
    bottom: 1%;
    right: 90%;
    left: 10%;
    height: 10%;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

input[type="text"] {
    height: 35px;
    width: 100%;
    font-size: 24px;
    background-color: #121212;
    color: white;
    border: none;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: green;
    outline: none;
    caret-color: blue;

}

/* ------------------------------------- */

.break {
    white-space: normal;
    word-wrap: break-word;
}

#chatbox {
    text-align:left
    display: flex;
    flex-direction: column;
    align-items: center;
}

.responses, .robot_pic {
    display: inline;
}

/* #responses {
    flex: 1;
    justify-content: center;
    margin: 40px 50px;

} */

#pic_container {
    flex: 2;
}

#foot {
    padding-bottom: 4%;
    padding-top: 1%;
    font-size: .9em;
    color: #a29ea6;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #121212;
    /* color: white; */
    text-align: center;
    margin-top: 5%;

}

.footer_links {
    color : #6f0be4;
}

.current_pg {
    color: #E46F0B;
}

img.robot_pic {
    float:left;
    height: 40px;
    width:60px;
    margin-right: 5px;

}

.dynamic {
    flex: 1;
    margin: 2%, 2%, 2%, 2%;
    box-sizing: border-box;
}

input#buttonInput {
    background-color: #121212;
    border: none;
    color: #121212;
}

/* #chatbox {
    z-index: 0;
} */


p.botText, p.userText {
    word-wrap: break-word
}

p.userText {
    color:gray;
}

img.emoji {
    /* height:10%;
    width:10%; */
    height:33px;
}

img.large {
    width: 80%;
    height: auto;
    padding-left: 10%;
    padding-right: 10%;
}

span.emojicontainer {
    height:80%;
    width:100%;
    vertical-align: middle;
}

.bold_code {
    font-family: 'Press Start 2P', cursive;
}


table#help_table {
    background-color: #ffffff;
    border: 2px solid green;
    border-spacing: 5px;
    width:100%;
    margin-left: 5px;

}

th, td {
    padding: 15px;
}

th {
    text-align: left;
    background-color: #121212;
    margin-top: 10px;
    margin-bottom: 10px;
    color:white;
    line-height:23px;
}

table#help_table, th, td {
    border: 1px solid #8e8e8ed9;
    border-collapse: collapse;
    padding-top: 0px;
    padding-left: 3px;
    font-family: 'Source Code Pro';

}

tr:nth-child(even) {
    background-color: #b3b3b3
}

span#volume_warning {
    padding-left: 10%;
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px) {

    #foot {
        padding-bottom: 4%;
        padding-top: 1%;
        font-size: .9em;
        color: #a29ea6;
        margin-bottom: 10%;
    }

    p {
        font-size: 20px;
        padding-bottom: 3.5%;

    }

    .responses, .robot_pic {
        display: inline;
        margin-top: -1%;
        /* to center ui icons with text on mobile*/
    }

    body {
        padding-bottom: 120px;
    }

    input[type="text"] {
        height: 30px;
        width: 100%;
        font-size: 20px;
        background-color: #121212;
        color: white;
        border: none;
        border-bottom-style: solid;
        border-bottom-width: 2px;
        border-bottom-color: green;
        outline: none;
        caret-color: blue;

    }


    img.robot_pic {
        float:left;
        height: 35px;
        width:50px;
        margin-right: 5px;

    }

}

/* Desktops and laptops ----------- */
@media only screen
and (min-width : 1224px) {
    p {
        font-size: 30px;
    }
}

/* Large screens ----------- */
@media only screen
and (min-width : 1824px) {
    p {
        font-size: 35px;
    }

    #foot {
        font-size: 120%;
    }
}

